adding evil group notes

--- a/OneWiki/data/Evil Group Crew.wiki
+++ b/OneWiki/data/Evil Group Crew.wiki
@@ -31,6 +31,6 @@ Grogar
 1 wolf
 
 4 horses  (3 lbs per day) - left at the Menagerie
-
+1 captured Wyvern (3 lbs per day)
 
 2 [Don Kreig] pirate grunts
