--- a/OneWiki/data/Evil Group Notes.wiki
+++ b/OneWiki/data/Evil Group Notes.wiki
@@ -430,4 +430,23 @@ rest back at the ship
 
 traveling around [Kunark] to [Neriak] (6 days)
 
+Croaker creates a Flame Skull (pg 134) on the way to Neriak
+
 next session will begin at Neriak
+
+++++Session 29
+Messages sent with Sending:
+Ques: "[Leeran], It's Croaker, do you have any diamonds or diamond dust for sale"
+Ans: "We don't currently have any, but I can make requests"
+Res: "Thank you, that would be great"
+
+"[Royal Armoror Grix], how are things, commission the carpenters to make trebuchets"
+
+Wyvern: "We are going to extract venom from your stinger, if you let us we will give you an extra lb of food"
+
+A Hag Eye is slipped into [Krieger]'s inventory by the [Crones of Neriak]
+
+Lightning acquires Hag Object #2 the severed dwarf head
+
+4 days traveling to the North side of [Faydwer] 
+-Croaker taming Wicket the Wyvern
