--- a/OneWiki/data/Kunark.wiki
+++ b/OneWiki/data/Kunark.wiki
@@ -8,7 +8,7 @@ Other regions of interest include
     -[The Ash Mount] - Volcano where Gruumsh is sealed (large body seemingly melted into the inner rock of the volcano)
 
 Wildlife of Kunark (monster manual): 
-    [Mistwraith] (use flesh golem pg 169)
+    [Mistwraith]
         Only comes out in the night during the mists, can't be found during the day.
         Appears as an abomination of many animals and humanoids
     Gray Ooze (pg 243) looks like a wet rock
