--- a/OneWiki/data/Mistwraith.wiki
+++ b/OneWiki/data/Mistwraith.wiki
@@ -4,3 +4,5 @@
 
 Only comes out in the night during the mists, can't be found during the day.
 Appears as an abomination of many animals and humanoids
+
+Immune to Fire
