--- a/OneWiki/data/Wyverns Lair.wiki
+++ b/OneWiki/data/Wyverns Lair.wiki
@@ -15,10 +15,10 @@ It opens up even more as it delves deeper.
 
 In the large open area are several Wyverns resting, darkvision required or other light source to see beyond the entry and Owl Bear chamber.
 
-ENTRANCE CHAMBER
++++ENTRANCE CHAMBER
 The chamber to the right of the entrance, is an area where Owlbears rest during the day
 
-TOP RIGHT CHAMBER
++++TOP RIGHT CHAMBER
 Bones from many humanoids/wolves/bears clutter the room.
 Rummaging through them will yield trinkets (roll on the trinket chart pg 160)
 -Other "Trinkets" that can be found on investigation rolls higher than DC 18 (roll a D6 to determine the item)
@@ -30,7 +30,7 @@ Rummaging through them will yield trinkets (roll on the trinket chart pg 160)
         -command word 'disperse'
     -Oil of Etherealness - pg 183 - A stopped vial that has generates cloudy gray oily condensation that quickly evaporates.    
     
-TOP CHAMBER
++++TOP CHAMBER
 a nest made from clothes,leathers,fur scraps acquired from victims, contains 1D4 Wyvern eggs (10 lbs each)
 
 TOP LEFT CHAMBER
@@ -39,12 +39,12 @@ a wet chamber with a small pool of opaque black water with wet rocks surrounding
             -everyone must pass a Dex 13 save or take an opportunity attack and -1 AC corrosion 
              from an Ooze that dropped on them, else the ooze drops next to the player. 
              
-BOTTOM LEFT CHAMBER
++++BOTTOM LEFT CHAMBER
     Wyvern-Owlbear-Bulette-Humanoid Mistwraith
     A huge (3x3) hideous transparent skined creature that shows an internal anatomy of several Wyvern, Owlbear, Bulettes... and humanoids. Bone structures formed together in unnatural ways. Many legs protrude from it's underside, many wings from above, and it has 6 heads facing in different directions (2 human, 2 Wyvern, 1 Owlbear, 1 Bulette), and a couple of long tails.
     USE PIT FIEND (pg 77)
     
-BOTTOM CHAMBER
++++BOTTOM CHAMBER
         A hallway that curves around, leading to a ruined carved stone entryway 40ftx40ft that has a solid stone wall behind it. The stones are carved with patterns that do not flow, spirals and lumps, holes and spikes
         Abbysal writing on the side columns say: 
             -LEFT "Tear way to Nessus." 
