--- a/OneWiki/data/Felwithe.wiki
+++ b/OneWiki/data/Felwithe.wiki
@@ -1,3 +1,21 @@
 ﻿++ Felwithe
 
-Old ruined city of high elves in [Faydwer]
+Old ruined city of high elves in [Faydwer] destroyed long ago by ancient Iksar armies during the rise to power of [Venril Sathir]
+
+It's walls look at if they would have been brilliant in their prime, but are but a pale resemblance of what they must have been.
+A few tall structures still stand intact.
+
+++++Converted Shrine of Kadi's Husk
+ _________
+|         |
+|_ _____ _|
+|____ ____|
+A humanoid [Mistwraith] named [Oliander] stands vigil in front of a statue of a woman whose skin is covered in thousands of scars. Hair that flows like fire over her shoulders, wearing armor adorned by skulls, and a single skull on her right hip.
+
+A plaque with Draconic writing sloppily etched upon it sits at the base of the statue:
+"Kadi, may you never have progeny, and may you never return to cull this world."
+
+++++Palace of Tearis Thex
+A concecrated building, that does not see the wear and tear of the rest of the ruins, though in a demolished state. An ancient order of paladins once called this thier temple, and a paladin king, [Tearis Thex] home. Looting the kings corpse will yield:
+
+-Platemail of Tearis Thex, a holy armor that offers the wearer resistance to necrotic damage
