adding group three notes

--- a/OneWiki/data/AkumaFruits.wiki
+++ b/OneWiki/data/AkumaFruits.wiki
@@ -32,7 +32,7 @@ ZOAN
 2. Ginko - Triggered by sloth
 3. Blue Footed Dodo - Triggered by hilarity (consumed by [Grogar] )
 4. Mouse - Triggered by shyness
-5. Wolf - Triggered by anger
+5. Wolf - Triggered by anger (consumed by [Tessa])
 6. Mammoth - Triggered by resolve
 7. Falcon - Triggered by intellect
 8. Ilzie  - Triggered by confusion
