--- a/OneWiki/data/Evil Group Notes.wiki
+++ b/OneWiki/data/Evil Group Notes.wiki
@@ -12,8 +12,8 @@ XXXXXXX XX|XXXXX       taxes of 3 helms deep
 
 XXXXXXX XXXXXXX
 XXXXXXX XXXXXXX
-XXXXXXX XXXXXX
-XXXXXXX
+XXXXXXX XXXXXXX
+XXXXXXX XXXXX
 
 250g given to Shirrong for doing an etherium inlay, silvering and Maliabilis enchantment to Grogar's Carpenter's Sharktooth Quarterstaff
 -20 days - 18 days crafting - 2 days enchanting - DONE
