--- a/OneWiki/data/Group Three Notes.wiki
+++ b/OneWiki/data/Group Three Notes.wiki
@@ -292,7 +292,7 @@ Quinn looks around for his bow and arrows
 The group runs into [Nogg] and fight him until interuppted by David Coppercap.
 -Plosive cares for the unconcious drunk and gives him 20g to get back on his feet
 
-The group goes to the magic shop and [Tessa] steals the Wolf [AkumaFruits]
+The group goes to the magic shop and [Tessa] steals a bite of the Wolf [AkumaFruits]
 -offers 500g in illusionary gold to hold it down until she comes back with the rest.
 
 Quinn searches town for his lost arrows and finds many
