--- a/OneWiki/data/House Salazar.wiki
+++ b/OneWiki/data/House Salazar.wiki
@@ -14,4 +14,4 @@ Lead be Lord Salazar, high strung, strict, uncompromising
     -assassination of a skaa - 20g
     -assassination of a Luthadel noble - 200g
     -assassination out of Kunark - 100g
-    -hired assassins reside at a secret hideout in [Kalas]
+    -hired assassins (pg 343) reside at a secret hideout in [Kalas]
