--- a/OneWiki/data/Kadi.wiki
+++ b/OneWiki/data/Kadi.wiki
@@ -4,3 +4,8 @@ A God of war whose husk is at [Felwithe] awaiting the [Daughter of Night] to awa
 
 She has cold Blue eyes, pale white skin, but her flesh is covered in thousands of scars from her battles. She has Jet black hair that flows like fire over her shoulders. As this avatar, She always wears black metal armor adorned by metal skulls. She has a single skull on her right hip.
 
+Year of the Skulls ritual:
+    -Once the [Daughter of the Night] has written the 13 books guided by [Kadi]'s hand, she must perform the ritual at her husk in [Felwithe]. Each day for 365 consecutive days, a freshly acquired skull must be placed nearby and attuned to the husk by the [Daughter of the Night]. On the 365th day, the skulls will come to life and seek out those who do not follow [Kadi] 
+
+When released by the Year of the Skulls ritual
+    -will begin converting all of her followers into flameskulls and transcend them to her plane of existence
