--- a/OneWiki/data/Group Three Notes.wiki
+++ b/OneWiki/data/Group Three Notes.wiki
@@ -1,27 +1,30 @@
 ﻿++ Group Three Notes
 
 CALENDAR
-XXXXXXX
+XXXXXXX  XXXXX
 XXXXXXX
 XXXXXXX
 XXXXXXX
 
 XXXXXXX
 XXXXXXX
-XXXXXX
+XXXXXXX
+XXXXXXX
 
 KEELBOAT WORK (of 20) - DONE
 [Geth] Making Map of Known World - DONE
 
-Ship parking coverage-OVERDUE XXXX
+Ship parking coverage-OVERDUE XXXXXXXXXXXXX (moved to marine HQ)
 
 Payment given for crafting to Shirrong Bronzecore
 -Great Axe -2 days -Half Plate -7 days - DONE - DONE
 
 Griffon Arrows x100 (20 per day) - DONE - ACQUIRED
+Griffon Arrows x240 (20 per day) (12 days)
+XXXXXXXXX
 
 Sailing Ship Completion 20 days
-XXXXX
+
 
 
 The group finds themselves marooned on an unknown island. Waking up after a terrible storm.
@@ -306,4 +309,55 @@ Tournament day!
 Quinn wins and loots Nanderdar, getting an undercommon note about the assassins in [Kalas]
 -Robert Culliford wins! 
 -Quinn gets runner up
+
+++++Session 12
+Tessa reinacts [Nogg]'s defeat at the tournament and gets boo'd at by fans of Nogg
+
+Quinn reads the book [To Kill a Mocking Kenku]
+
+[Kyra] steals 2 pouches of winnings from members of [Robert Culliford]'s crew (100g and 200g)
+
+[Plosive] buys [Foresake the Gods] from The Sages Cellar in [Gorda]
+
+[Quinn] runs into Landerdar Velselthin and sends him away with two damaging arrow hits
+
+[Tessa] seduces [Robert Culliford] and gains a repor, and compensation by the Blooming Orchid for providing services
+
+Quinn buys arrows from an eutreprenurial drunk
+23 norm - 10g (sold for 5g)
+5 grif - 20g (sold for 10g)
+10grif = 5g 
+300 arrows worth of griffon feathers
+
+6 day trip to [Fiore] XXXXXXX
+-Kyra converts 10 normal arrows to griffon arrows
+-[Quinn] reads [To Kill a Mocking Kenku]
+-[Plosive] practice animal handling
+-[Tessa] performance
+
+[Quinn]'s claw necklace (Wyvern) came from Mr Maej the pawn shop merchant in [Augsburg]
+
+the group arrives late due to fog on day 7 to the East Dock of [Fiore]
+
+[Quinn] orders a Private at the East Dock to commission 240 Griffon arrows to be made by Yanny McLoughin for [Quinn]
+-pickup from Yanny
+-12 days to complete
+
+4 day trip to [Marine HQ] XXXX
+Marine HQ dock captain
+ -signs paperwork of re-acquisition for Quinn and his 3 private subordinates.
+ -is told supplies and personell are needed for hunting down [Rex The Smasher]
+    -2 more privates
+    -50lbs of food
+ -notes down details for a new bounty for [Robert Culliford] 
+    -stole money, terrorizing countryside of "Cassassafras" to the "south"
+    -expells glass shards when struck
+    
+[Quinn] goes to claim the bounty on the [Bandits of Deception] claiming to have their ship
+
+[Tessa] convinces Marine Privates that he faught well against a Glass man, [Robert Culliford]
+    -convinces Privates that [Quinn] speaks celetial
+
+[Quinn] orders 200 arrows to be delivered to thier vessel by tomorrow
+
 
