--- a/OneWiki/data/Quinn.wiki
+++ b/OneWiki/data/Quinn.wiki
@@ -1,3 +1,10 @@
 ﻿++ Quinn
 
 friends with [Artin Torbera]
+
+Quinn's home barracks at [Marine HQ] is the west barracks
+-Sophia human F shortsword+shield
+-Gerald human M greatsword
+-Scill goliath M longsword + shield
+-Lars half orc M shortsword + shield
+-Kaylin human F archer (best friend)
