--- a/OneWiki/data/Group Three Notes.wiki
+++ b/OneWiki/data/Group Three Notes.wiki
@@ -11,21 +11,20 @@ XXXXXXX
 XXXXXXX
 XXXXXXX
 
-KEELBOAT WORK (of 20) - DONE
-[Geth] Making Map of Known World - DONE
-
-Ship parking coverage-OVERDUE XXXXXXXXXXXXX (moved to marine HQ)
-
-Payment given for crafting to Shirrong Bronzecore
--Great Axe -2 days -Half Plate -7 days - DONE - DONE
-
 Griffon Arrows x100 (20 per day) - DONE - ACQUIRED
 Griffon Arrows x240 (20 per day) (12 days)
 XXXXXXXXX
 
 Sailing Ship Completion 20 days
+-purchased by [Ak'anon] councilmember Calwin
 
+Payment given for crafting to Shirrong Bronzecore
+-Great Axe -2 days -Half Plate -7 days - DONE - DONE
 
+KEELBOAT WORK (of 20) - DONE
+[Geth] Making Map of Known World - DONE
+
+Ship parking coverage-OVERDUE XXXXXXXXXXXXX (moved to marine HQ)
 
 The group finds themselves marooned on an unknown island. Waking up after a terrible storm.
 Thier supply vessel had 3 other crewmates who are now washed ashore with them. Only these three managed to survive.
