--- a/OneWiki/data/Kalas.wiki
+++ b/OneWiki/data/Kalas.wiki
@@ -20,13 +20,12 @@ Areas of interest:
     -2nd Floor Locking pit trap that is directly above the first floor locking put trap.
 
 
-    -Iksar Assassin's Hideout, 2nd floor
+    -[House Salazar Assassins]'s Hideout, 2nd floor
         in what would be the king's quarters, is now the main room for Iksar Assassins.
         the room has 2 Fire-Breathing Statue traps outside of it, DC 15 perception to spot the pressure plate
             -30 foot cones, DC 13 DEX save to take half of 4d10 damage
         -5 Iksar assassins (pg 343) inside that will have Light Crossbows pointed at the adventurer's    
             -Rhogar (M), Kava (F), Perra (M), Donaar (M), Patrin (F)
-            -Loyal to [House Salazar]
 
 ++++The Koloss slums
     An area of Kalas where the buildings are the most destroyed by Koloss fighting
