--- a/OneWiki/data/Kaladim.wiki
+++ b/OneWiki/data/Kaladim.wiki
@@ -9,9 +9,16 @@ The inside is littered with broken human arms, the remainder of each respective 
 [Mistwraith] - Purple Worm
     -Under Contract by [Venril Sathir] to "protect" the Daughter of the Night, and always consume her arms.
     -Also has hundreds of Human arms
+        -claws formed of precious gemstones and metals
+            -2 5000g gemstone claws
+            -6 1000g gemstone claws
+            -10 500g gemstone claws
+            -156 silver claws
+            -312 gold claws
+            -420 copper claws
 
 ++++The Dry Well
-  Of all the rocky caves, this is the place that most resembles it's original construction, ancient dwarven stonework around what would have been a very deep pool of well water. But instead is now home to the [Daughter of the Night] 
+  Of all the rocky caves, this is the place that most resembles it's original construction, ancient dwarven stonework around what would have been a very deep pool of well water. But instead is now home to the [Daughter of the Night] who screams in agony while futily writing scriptures on the limited wall space with bloody stubbed arms.
   
   Annis Hag - Daughter of the Night
     -was given ancient trolls blood to achieve a near immortality
