--- a/OneWiki/data/Gorda.wiki
+++ b/OneWiki/data/Gorda.wiki
@@ -44,7 +44,7 @@ Brawler's Ring
           -Ron Schnopps(human) [Don Kreig] grunt- Guard pg 347
           -Grom Mallamoog(half orc) orcish trash - Thug pg 350
           -Lander Koll(dwarf) dock worker with grudge against [Don Kreig] - Berserker pg 344 - friend of Ron Schnopps
-          -Lanerdar Velselthin(drow elf) good looking ladies man - Veteran pg 350 - came from the Assassins hideout in [Kalas]
+          -Lanerdar Velselthin(drow elf) good looking ladies man - Veteran pg 350 - [House Salazar Assassins] from [Kalas]
           -[Nogg](half koloss) a blood brother of [Rex The Smasher] - Gladiator pg 346
           -[Robert Culliford] (if in town)
         If gambling, 
