--- a/OneWiki/data/Faydwer.wiki
+++ b/OneWiki/data/Faydwer.wiki
@@ -7,6 +7,7 @@ Places of Interest:
     - [Kaladim] (ruins)
     - [Kelethin] (ruins)
     - [Southern Iksar Port of Faydwer]
+    - [Oggok]
 
 
 Wildlife of Faydwer (monster manual): 
